--- a/777/timeline/style.css
+++ b/777/timeline/style.css
@@ -395,7 +395,7 @@ h1 {
 }
 
 .timeline li:nth-child(18) > span:before {
-	background-image: url(https://static.wikia.nocookie.net/animetranscript/images/4/46/Aang_2.png/revision/latest/scale-to-width-down/250?cb=20120824041619);
+	background-image: url(https://static1.srcdn.com/wordpress/wp-content/uploads/2020/08/Featured-Aang-Cropped.jpg);
 	background-position: center 37%;
 }
 
