--- a/777/timeline/style.css
+++ b/777/timeline/style.css
@@ -20,7 +20,7 @@ body:before {
 	position: fixed;
 	height: 100vh;
 	width: 100vh;
-	background: url(https://josetxu.com/demos/img/ss-sun.jpg);
+	background: url(https://media-assets.wired.it/photos/630c8fc46291e0c930d0cb37/16:9/w_1280,c_limit/solar-flare.en.jpg);
 	left: -90vh;
 	top: 0;
 	border-radius: 100%;
@@ -179,7 +179,7 @@ h1 {
 	top: -0.25vmin;
 	border-radius: 50%;
 	z-index: 1;
-	background: url(https://josetxu.com/demos/img/earth.png);
+	background: url(https://png.pngtree.com/element_our/png_detail/20181118/beautiful-earth-elements-png_232338.jpg);
 	background-size: contain;
 	box-sizing: border-box;
 }
@@ -509,7 +509,7 @@ h1 {
 	height: 2.5vmin;
 	position: absolute;
 	top: -4vmin;
-	background: url(https://josetxu.com/demos/img/earth.png);
+	background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/The_Blue_Marble_%28remastered%29.jpg/640px-The_Blue_Marble_%28remastered%29.jpg);
 	background-size: contain;
 	background-repeat: no-repeat;
 	box-shadow: 0 0 1vmin 0 #000;
